--- a/app/src/main/res/layout/fragment_add_property.xml
+++ b/app/src/main/res/layout/fragment_add_property.xml
@@ -332,7 +332,7 @@
 
                     <com.google.android.material.card.MaterialCardView
                         android:layout_width="match_parent"
-                        android:layout_height="45dp"
+                        android:layout_height="50dp"
                         android:layout_marginTop="10dp"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="10dp"
@@ -347,11 +347,11 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:background="@color/white"
-                                android:paddingStart="10dp"
+
                                 android:spinnerMode="dropdown"
                                 android:layout_centerVertical="true"
-                                android:paddingEnd="16dp"
-                                android:textSize="16sp"
+
+                                android:textSize="@dimen/H5"
                                 android:textColor="@color/secondary" />
 
                             <ImageView
@@ -368,7 +368,7 @@
 
                     <com.google.android.material.card.MaterialCardView
                         android:layout_width="match_parent"
-                        android:layout_height="45dp"
+                        android:layout_height="50dp"
                         android:layout_marginTop="10dp"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="10dp"
@@ -383,11 +383,9 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:background="@color/white"
-                                android:paddingStart="10dp"
                                 android:spinnerMode="dropdown"
                                 android:layout_centerVertical="true"
-                                android:paddingEnd="16dp"
-                                android:textSize="16sp"
+                                android:textSize="@dimen/H5"
                                 android:textColor="@color/secondary" />
 
                             <ImageView
@@ -588,12 +586,13 @@
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/black">
 
-                        <com.google.android.material.textfield.TextInputEditText
+                        <AutoCompleteTextView
                             android:id="@+id/addressLine1ET"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:fontFamily="@font/roboto"
                             android:textSize="@dimen/H5"
+                            android:paddingStart="15dp"
                             android:inputType="text"
                             android:textColor="@color/secondary"
                             android:textColorHint="@color/secondary" />
