-Created AddReservationAdapter -Created AddReservationFragment -solved the bug of Channel List.

--- a/app/src/main/res/layout/item_active_channel.xml
+++ b/app/src/main/res/layout/item_active_channel.xml
@@ -78,6 +78,7 @@
             />
         
         <androidx.cardview.widget.CardView
+            android:id="@+id/card_manage_grid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@+id/propertyLogo"
