--- a/app/src/main/res/layout/item_recycler_channel_management.xml
+++ b/app/src/main/res/layout/item_recycler_channel_management.xml
@@ -163,6 +163,7 @@
         app:cardCornerRadius="9dp"
         app:cardBackgroundColor="#0CCE2B"/>
     <androidx.cardview.widget.CardView
+        android:id="@+id/card_manage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@id/g9"
