--- a/app/src/main/res/layout/fragment_meal_plan.xml
+++ b/app/src/main/res/layout/fragment_meal_plan.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".dashboard.configuration.roomsAndRates.inclusions.InclusionPlansFragment">
+    tools:context=".dashboard.configuration.roomsAndRates.mealPlan.MealPlanFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:id="@+id/aA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Inclusions"
+            android:text="Meal Plans"
             android:fontFamily="@font/roboto_bold"
             android:textColor="@color/secondary"
             android:textSize="@dimen/H2"
@@ -157,6 +157,7 @@
                 android:layout_margin="20dp"
                 android:orientation="vertical">
 
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/items_linear"
                     android:layout_width="match_parent"
@@ -168,7 +169,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        app:layout_constraintGuide_percent="0.12"/>
+                        app:layout_constraintGuide_percent="0.11"/>
                     <androidx.constraintlayout.widget.Guideline
                         android:id="@+id/guide2"
                         android:layout_width="wrap_content"
@@ -180,7 +181,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        app:layout_constraintGuide_percent="0.50"/>
+                        app:layout_constraintGuide_percent="0.46"/>
                     <androidx.constraintlayout.widget.Guideline
                         android:id="@+id/guide4"
                         android:layout_width="wrap_content"
@@ -193,7 +194,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         style="@style/listTextHeading"
-                        android:layout_marginStart="2dp"
                         android:text="Short Code"
                         app:layout_constraintEnd_toStartOf="@id/text2"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -205,7 +205,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         style="@style/listTextHeading"
-                        android:text="Inclusion Name"
+                        android:text="Meal Plan Name"
                         app:layout_constraintEnd_toEndOf="@id/guide2"
                         app:layout_constraintStart_toStartOf="@id/guide1"
                         app:layout_constraintBottom_toBottomOf="@id/shortCode"
@@ -217,22 +217,10 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         style="@style/listTextHeading"
-                        android:text="Inclusion Type"
+                        android:text="Charge"
                         android:layout_marginStart="5dp"
-                        app:layout_constraintEnd_toStartOf="@id/text4"
+                        app:layout_constraintEnd_toStartOf="@id/text5"
                         app:layout_constraintStart_toStartOf="@id/guide2"
-                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
-                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
-
-                    <TextView
-                        android:id="@+id/text4"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        style="@style/listTextHeading"
-                        android:text="Posting Rule"
-                        android:layout_marginStart="5dp"
-                        app:layout_constraintStart_toEndOf="@id/text3"
-                        app:layout_constraintEnd_toStartOf="@id/guide3"
                         app:layout_constraintBottom_toBottomOf="@id/shortCode"
                         app:layout_constraintTop_toTopOf="@id/shortCode"/>
 
@@ -241,7 +229,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         style="@style/listTextHeading"
-                        android:text="Charge Rule"
+                        android:text="Created By"
                         android:layout_marginStart="5dp"
                         app:layout_constraintEnd_toStartOf="@id/text6"
                         app:layout_constraintStart_toStartOf="@id/guide3"
@@ -253,7 +241,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         style="@style/listTextHeading"
-                        android:text="Created By"
+                        android:text="Last Modified"
                         android:layout_marginStart="5dp"
                         app:layout_constraintStart_toEndOf="@id/text5"
                         app:layout_constraintEnd_toStartOf="@id/guide4"
@@ -267,8 +255,8 @@
                         android:layout_height="wrap_content"
                         style="@style/listTextHeading"
                         android:text="Actions"
-                        android:textAlignment="center"
-                        android:layout_marginStart="16dp"
+                        android:paddingStart="14dp"
+                        android:layout_marginStart="10dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@id/guide4"
                         app:layout_constraintBottom_toBottomOf="@id/shortCode"
@@ -286,7 +274,7 @@
                     android:id="@+id/paymentTypeRecycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    tools:listitem="@layout/item_holidays"/>
+                    tools:listitem="@layout/item_meal_plan"/>
 
             </LinearLayout>
 
