--- a/app/src/main/res/layout/item_meal_plan.xml
+++ b/app/src/main/res/layout/item_meal_plan.xml
@@ -6,6 +6,7 @@
     android:layout_marginTop="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/items_linear"
         android:layout_width="match_parent"
@@ -17,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.12"/>
+            app:layout_constraintGuide_percent="0.11"/>
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide2"
             android:layout_width="wrap_content"
@@ -29,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.50"/>
+            app:layout_constraintGuide_percent="0.46"/>
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide4"
             android:layout_width="wrap_content"
@@ -37,12 +38,11 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.87"/>
 
-
         <TextView
             android:id="@+id/shortCode"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            style="@style/listText"
+            style="@style/listTextHeading"
             android:text="Short Code"
             app:layout_constraintEnd_toStartOf="@id/text2"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -53,8 +53,8 @@
             android:id="@+id/text2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            style="@style/listText"
-            android:text="Holiday Name"
+            style="@style/listTextHeading"
+            android:text="Meal Plan Name"
             app:layout_constraintEnd_toEndOf="@id/guide2"
             app:layout_constraintStart_toStartOf="@id/guide1"
             app:layout_constraintBottom_toBottomOf="@id/shortCode"
@@ -65,23 +65,11 @@
             android:id="@+id/text3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            style="@style/listText"
-            android:text="Start Date"
+            style="@style/listTextHeading"
+            android:text="Charge"
             android:layout_marginStart="5dp"
-            app:layout_constraintEnd_toStartOf="@id/text4"
+            app:layout_constraintEnd_toStartOf="@id/text5"
             app:layout_constraintStart_toStartOf="@id/guide2"
-            app:layout_constraintBottom_toBottomOf="@id/shortCode"
-            app:layout_constraintTop_toTopOf="@id/shortCode"/>
-
-        <TextView
-            android:id="@+id/text4"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            style="@style/listText"
-            android:text="End Date"
-            android:layout_marginStart="5dp"
-            app:layout_constraintStart_toEndOf="@id/text3"
-            app:layout_constraintEnd_toStartOf="@id/guide3"
             app:layout_constraintBottom_toBottomOf="@id/shortCode"
             app:layout_constraintTop_toTopOf="@id/shortCode"/>
 
@@ -89,8 +77,8 @@
             android:id="@+id/text5"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            style="@style/listText"
-            android:text="By Arjun on 11:12, 12/12/2023"
+            style="@style/listTextHeading"
+            android:text="Created By"
             android:layout_marginStart="5dp"
             app:layout_constraintEnd_toStartOf="@id/text6"
             app:layout_constraintStart_toStartOf="@id/guide3"
@@ -101,11 +89,11 @@
             android:id="@+id/text6"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            style="@style/listText"
-            android:text="By Arjun on 11:12, 12/12/2023"
+            style="@style/listTextHeading"
+            android:text="Last Modified"
             android:layout_marginStart="5dp"
             app:layout_constraintStart_toEndOf="@id/text5"
-            app:layout_constraintEnd_toStartOf="@id/actions"
+            app:layout_constraintEnd_toStartOf="@id/guide4"
             app:layout_constraintBottom_toBottomOf="@id/shortCode"
             app:layout_constraintTop_toTopOf="@id/shortCode"/>
 
