--- a/app/src/main/res/layout/fragment_add_reservation.xml
+++ b/app/src/main/res/layout/fragment_add_reservation.xml
@@ -97,7 +97,6 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="0.75"
                         android:layout_marginEnd="12dp"
-
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -857,14 +856,13 @@
             android:layout_height="wrap_content"
             android:layout_weight="1.25"
             android:layout_marginTop="20dp"
-            android:backgroundTint="@color/primaryBackground"
-            app:cardCornerRadius="12dp"
-            android:layout_marginEnd="20dp">
+            app:cardCornerRadius="12dp">
         <androidx.cardview.widget.CardView
             android:id="@+id/card_right"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="20dp"
             android:backgroundTint="@color/primaryBackground"
             app:cardCornerRadius="12dp">
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -1111,6 +1109,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/card_right"
             android:layout_marginTop="12dp"
+            android:layout_marginEnd="20dp"
             android:backgroundTint="@color/primaryBackground"
             app:cardCornerRadius="12dp">
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -1133,6 +1132,37 @@
                 android:layout_marginVertical="12dp"
                 android:text="Apply Discount"
                 />
+
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:strokeWidth="1dp"
+                android:layout_marginVertical="9dp"
+                android:layout_marginEnd="12dp"
+                app:cardBackgroundColor="@color/white"
+                app:strokeColor="@color/grey10"
+                app:cardCornerRadius="9dp">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginVertical="9dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:text="-0.00"
+                        android:layout_marginEnd="9dp"
+                        android:textSize="@dimen/H5"
+                        android:textColor="@color/lightBlack"
+                        android:fontFamily="@font/roboto_medium"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </com.google.android.material.card.MaterialCardView>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
@@ -1141,6 +1171,9 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/card_right2"
             android:layout_marginTop="12dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="9dp"
             android:backgroundTint="@color/primaryBackground"
             app:cardCornerRadius="12dp">
         <androidx.constraintlayout.widget.ConstraintLayout
