--- a/app/src/main/res/layout/fragment_charges_and_rates.xml
+++ b/app/src/main/res/layout/fragment_charges_and_rates.xml
@@ -440,14 +440,28 @@
             android:layout_height="match_parent"
             android:paddingVertical="10dp">
 
+            <TextView
+                android:id="@+id/heading1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto_medium"
+                android:layout_marginTop="10dp"
+                android:text="Rate Plan"
+                android:textAlignment="center"
+                android:textColor="@color/secondary"
+                android:textSize="@dimen/H4"
+                android:layout_marginStart="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginTop="5dp"
                 android:layout_marginEnd="30dp"
-                app:layout_constraintTop_toTopOf="@id/ll7"
-                app:layout_constraintEnd_toEndOf="@id/ll7">
+                app:layout_constraintTop_toTopOf="@id/heading1"
+                app:layout_constraintBottom_toBottomOf="@id/heading1"
+                app:layout_constraintEnd_toEndOf="parent">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -461,6 +475,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/cpCheckBox"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     app:buttonTint="@color/skyBlue"
@@ -479,6 +494,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/epCheckBox"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     app:buttonTint="@color/skyBlue"
@@ -498,6 +514,7 @@
 
 
                 <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/apCheckBox"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     app:buttonTint="@color/skyBlue"
@@ -516,9 +533,9 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/mapCheckBox"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    app:checkedState="checked"
                     app:buttonTint="@color/skyBlue"
                     android:layout_marginStart="20dp"/>
 
@@ -536,39 +553,28 @@
 
             </LinearLayout>
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/item_rate_plan_details"
+                tools:itemCount="1"
+                android:layout_marginTop="15dp"
+                android:layout_marginHorizontal="20dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@id/heading1"/>
+
             <LinearLayout
                 android:id="@+id/ll7"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:orientation="vertical"
+                android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto_medium"
-                    android:layout_marginTop="10dp"
-                    android:text="Rate Plan"
-                    android:textAlignment="center"
-                    android:textColor="@color/secondary"
-                    android:textSize="@dimen/H4"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    tools:listitem="@layout/item_rate_plan_details"
-                    tools:itemCount="1"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginEnd="20dp"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    android:orientation="vertical"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/recyclerView">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -604,7 +610,7 @@
                             app:layout_constraintTop_toTopOf="parent">
 
                             <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/room_type_text"
+                                android:id="@+id/ratePlan_text"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:fontFamily="@font/roboto"
@@ -628,7 +634,7 @@
                             app:endIconTint="@color/black">
 
                             <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/short_code_text"
+                                android:id="@+id/rate_code_text"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:fontFamily="@font/roboto"
@@ -650,6 +656,7 @@
                             app:endIconTint="@color/black">
 
                             <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/mealPlanETxt"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:fontFamily="@font/roboto"
@@ -682,7 +689,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.cardview.widget.CardView
-                        android:id="@+id/add_name"
+                        android:id="@+id/addInclusions"
                         style="@style/CardViewTheme"
                         android:layout_width="wrap_content"
                         android:layout_height="40dp"
@@ -720,9 +727,9 @@
                         app:cardBackgroundColor="@color/secondaryBackground"
                         app:cardCornerRadius="9dp"
                         app:cardElevation="2dp"
-                        app:layout_constraintEnd_toEndOf="@id/add_name"
+                        app:layout_constraintEnd_toEndOf="@id/addInclusions"
                         app:layout_constraintStart_toStartOf="@id/charges_head"
-                        app:layout_constraintTop_toBottomOf="@id/add_name">
+                        app:layout_constraintTop_toBottomOf="@id/addInclusions">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
@@ -1096,6 +1103,7 @@
                                             app:layout_constraintTop_toTopOf="@id/rateCard" />
 
                                         <TextView
+                                            android:id="@+id/ratePlanTotalTxt"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:fontFamily="@font/roboto"
