--- a/app/src/main/res/layout/item_rate_plan_details.xml
+++ b/app/src/main/res/layout/item_rate_plan_details.xml
@@ -32,6 +32,7 @@
                 android:textSize="@dimen/H5"/>
 
             <TextView
+                android:id="@+id/ratePlanText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto"
@@ -59,6 +60,7 @@
                 android:textSize="@dimen/H5"/>
 
             <TextView
+                android:id="@+id/rateCode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto"
@@ -85,6 +87,7 @@
                 android:textSize="@dimen/H5"/>
 
             <TextView
+                android:id="@+id/totalInclusions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto"
@@ -112,6 +115,7 @@
                 android:textSize="@dimen/H5"/>
 
             <TextView
+                android:id="@+id/extraAdultRateTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto"
@@ -138,6 +142,7 @@
                 android:textSize="@dimen/H5"/>
 
             <TextView
+                android:id="@+id/extraChildRateTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto"
@@ -165,6 +170,7 @@
                 android:textSize="@dimen/H5"/>
 
             <TextView
+                android:id="@+id/ratePlanTotalTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto"
