-Created drop downs of bulk update dialog for rate type and room type. -integrated room type api.

--- a/app/src/main/res/layout/dilog_bulk_update.xml
+++ b/app/src/main/res/layout/dilog_bulk_update.xml
@@ -279,7 +279,8 @@
                         android:textColor="@color/secondary"
                         android:clickable="true"
                         android:editable="false"
-                        android:focusable="true"/>
+                        android:cursorVisible="false"
+                        android:focusable="false"/>
                 </com.google.android.material.textfield.TextInputLayout>
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/card_rates"
@@ -545,7 +546,8 @@
                         android:textColor="@color/secondary"
                         android:clickable="true"
                         android:editable="false"
-                        android:focusable="true"/>
+                        android:cursorVisible="false"
+                        android:focusable="false"/>
                 </com.google.android.material.textfield.TextInputLayout>
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/card_restrictions"
