--- a/app/src/main/res/layout/fragment_rates_and_inventory.xml
+++ b/app/src/main/res/layout/fragment_rates_and_inventory.xml
@@ -83,9 +83,10 @@
                 android:id="@+id/source_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                style="@style/subText"
+                android:fontFamily="@font/roboto_medium"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
+                android:textSize="@dimen/H5"
                 android:inputType="text"
                 android:editable="false"
                 android:focusable="false"
@@ -115,7 +116,8 @@
             android:id="@+id/rates_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            style="@style/subText"
+            android:fontFamily="@font/roboto_medium"
+            android:textSize="@dimen/H5"
             android:inputType="text"
             android:text="Rates"
             android:paddingTop="5dp"
@@ -146,7 +148,8 @@
             android:id="@+id/roomType_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            style="@style/subText"
+            android:fontFamily="@font/roboto_medium"
+            android:textSize="@dimen/H5"
             android:inputType="text"
             android:text="Room Type"
             android:paddingTop="5dp"
